docs/milestones/v0.92.1/evidence/cloud/gcp-e/readbacks/adl-494-gpu-smoke-r9-202608310239.support-firewall.json
{
  "allowed": [
    {
      "IPProtocol": "tcp",
      "ports": [
        "22"
      ]
    }
  ],
  "creationTimestamp": "2026-08-30T19:06:44.927-07:00",
  "description": "",
  "direction": "INGRESS",
  "disabled": false,
  "id": "4712920311878213467",
  "kind": "compute#firewall",
  "logConfig": {
    "enable": false
  },
  "name": "adl-494-gpu-smoke-iap-ssh",
  "network": "https://www.googleapis.com/compute/v1/projects/cs-poc-cha8mmii0xk0iaw5vpf8mxf/global/networks/default",
  "priority": 1000,
  "selfLink": "https://www.googleapis.com/compute/v1/projects/cs-poc-cha8mmii0xk0iaw5vpf8mxf/global/firewalls/adl-494-gpu-smoke-iap-ssh",
  "sourceRanges": [
    "35.235.240.0/20"
  ],
  "targetTags": [
    "adl-494-gpu-smoke"
  ]
}
